<resources>
    <string name="app_name">Day 2 Day News</string>

    <string name="branding">Redple</string>
    <string name="home">Home</string>
    <string name="science">Science</string>
    <string name="buisness">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="appName">Loret News</string>

</resources>