<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/appName"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:padding="5dp"
                android:src="@drawable/ic_search"    />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/white"
        app:tabIndicatorColor="#03A9F4"
        app:tabIndicatorHeight="3.5dp"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="#03A9F4"
        app:tabTextColor="#618C8F">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/HomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Science"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Buisness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buisness">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Entertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Tech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology">

        </com.google.android.material.tabs.TabItem>


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/frangmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/include"
        android:layout_marginTop="0dp">


    </androidx.viewpager.widget.ViewPager>


</RelativeLayout>
